--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
         "Accueil",
+        "Contacte",
         "persistor",
-        "Wraper"
+        "propos",
+        "Wraper",
+        "اتصل",
+        "العربية"
     ]
 }
