--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
-    "cSpell.words": [
-        "Accueil",
-        "Contacte",
-        "persistor",
-        "propos",
-        "Wraper",
-        "اتصل",
-        "العربية"
-    ]
+  "cSpell.words": [
+    "Accueil",
+    "Contacte",
+    "persistor",
+    "propos",
+    "RAPIDAPI",
+    "Wraper",
+    "اتصل",
+    "العربية"
+  ]
 }
