--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "react": "^18.3.1",
