--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
-    "axios": "^1.7.9",
+    "axios": "^0.21.4",
+    "axios-cache-adapter": "^2.7.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
