--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbocar",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,13 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^0.21.4",
-    "axios-cache-adapter": "^2.7.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
